--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,14 @@
 			"path": "/api/cron",
 			"schedule": "0 23 * * 1-5"
 		}
-	]
+	],
+	"functions": {
+		"app/api/cron/route.ts": {
+			"runtime": "nodejs20.x"
+		}
+	},
+	"buildCommand": "npm run build",
+	"outputDirectory": ".next",
+	"installCommand": "npm install --legacy-peer-deps",
+	"public": true
 }
