--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22.13.1'  # Mise à jour vers la dernière version
       
       - name: Install dependencies
         run: npm install --legacy-peer-deps
