--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.13.1'  # Mise à jour vers la dernière version
+          node-version: '22.13.1'
       
       - name: Install dependencies
         run: npm install --legacy-peer-deps
@@ -28,17 +28,23 @@ jobs:
         run: node scripts/cron_donwload_cvs.js
         
       - name: Commit changes
+        id: commit
         run: |
           git config --global user.name 'GitHub Action Bot'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add data/
-          git commit -m "🤖 MAJ automatique des taux de change" || exit 0
-          git push
+          git commit -m "🤖 MAJ automatique des taux de change" || echo "::set-output name=committed::false"
+          if [ $? -eq 0 ]; then
+            git push
+            echo "::set-output name=committed::true"
+          fi
         
       - name: Install Vercel CLI
+        if: steps.commit.outputs.committed == 'true'
         run: npm install --global vercel@latest
         
       - name: Deploy to Vercel
+        if: steps.commit.outputs.committed == 'true'
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
