--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
 		"react-hot-toast": "^2.5.1",
+		"react-is": "^19.0.0",
+		"recharts": "^2.15.1",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7"
 	},
