--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"lint": "next lint",
 		"cron": "node scripts/cron_donwload_cvs.js",
 		"convert": "node scripts/convertCSVtoJson.js",
-		"extractTitles": "node scripts/extractTitlesCSVtoJson.js"
+		"extractTitles": "node scripts/extractTitlesCSVtoJson.js",
+		"init": "nvmrc && next dev"
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.6",
@@ -39,6 +40,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.6",
+		"nvmrc": "^1.1.0",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
