Replace react-hot-toast with Sonner, update dependencies and styling
- Switch from react-hot-toast to Sonner for toast notifications
- Update package.json and package-lock.json dependencies
- Modify layout and components to use Sonner
- Adjust font to Poppins and update metadata
- Add NavBar to layout
- Refactor page components with new styling and core components

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"cron": "node scripts/cron_donwload_cvs.js",
+		"cron": "node scripts/cron_download_cvs.js",
 		"convert": "node scripts/convertCSVtoJson.js",
 		"extractTitles": "node scripts/extractTitlesCSVtoJson.js",
 		"init": "nvmrc && next dev"
@@ -28,9 +28,9 @@
 		"react": "^19.0.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
-		"react-hot-toast": "^2.5.1",
 		"react-is": "^19.0.0",
 		"recharts": "^2.15.1",
+		"sonner": "^1.7.4",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7"
 	},
